# TrabajoIs

./: CMakeLists.txt  DirectorAcademico.h  TestInscribirse.cc  TestMostrar.cc  TestOrganizador.cc  Testusuario.cc  UsuarioRegistrado.cc  UsuarioRegistrado.h  actividad.cc  actividad.h  actividades.txt  maillist.h  main.cc  organizador.cc  organizador.h  ponente.h  usuario.cc  usuario.h  usuarios.txt
bd/: actividades.txt  usuarios.txt
